[metadata]
name = nncore
author= SSDF-TEAM
description = nncore package
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pytorch
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
url = https://github.com/HCMUS-ROBOTICS/ssdf-nncore